made edits for sushi

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ul>
         <li>pizza</li>
         <li>tacos</li>
+        <li>sushi</li>
+        <li>dim sum</li>
     </ul>
 
     <script src="./static/js/boo.js"></script>
