added countries for foods

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <ul>
         <li>pizza</li>
         <li>tacos</li>
+        <li>Thai</li>
+        <li>Italian</li>
+        <li>Indian</li>
+        <li>Mexican</li>
     </ul>
 
     <script src="./static/js/boo.js"></script>
